--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/provider-upload-cloudinary": "^4.11.1",
     "@strapi/strapi": "4.11.1",
     "cloudinary": "^1.37.1",
-    "pg": "8.8.0"
+    "pg": "^8.8.0",
+    "strapi-plugin-upload": "^3.6.11"
   },
   "author": {
     "name": "A Strapi developer"
