--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/provider-upload-cloudinary": "^4.11.1",
     "@strapi/strapi": "4.11.1",
     "cloudinary": "^1.37.1",
+    "heroku": "^8.1.8",
     "pg": "^8.8.0",
     "strapi-plugin-upload": "^3.6.11"
   },
