--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "uuid": "02869548-b73b-40cc-a3fe-ab0fecdea550"
   },
   "engines": {
-    "node": "<=18.x.x",
+    "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
