--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "uuid": "02869548-b73b-40cc-a3fe-ab0fecdea550"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "18.x",
+    "npm": "9.x"
   },
   "license": "MIT"
 }
